apps/bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli-wrapped
  namespace: external-secrets
  labels:
    app.kubernetes.io/instance: bitwarden-cli-wrapped
    app.kubernetes.io/name: bitwarden-cli-wrapped
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli-wrapped
      app.kubernetes.io/instance: bitwarden-cli-wrapped
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-cli-wrapped
        app.kubernetes.io/instance: bitwarden-cli-wrapped
    spec:
      containers:
        - name: bitwarden-cli
          image: oreillepale/bitwarden-cli-wrapper:newest-build
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8088
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - http://0.0.0.0:8088/sync
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 120
          # readinessProbe:
          #   tcpSocket:
          #     port: 8087
          #   initialDelaySeconds: 20
          #   failureThreshold: 3
          #   timeoutSeconds: 1
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 8087
          #   initialDelaySeconds: 10
          #   failureThreshold: 30
          #   timeoutSeconds: 1
          #   periodSeconds: 5
