apps/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-cli-wrapped
  namespace: external-secrets
  labels:
    app.kubernetes.io/instance: bitwarden-cli-wrapped
    app.kubernetes.io/name: bitwarden-cli-wrapped
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: 8088
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: bitwarden-cli-wrapped
    app.kubernetes.io/instance: bitwarden-cli-wrapped
